# coreopsis

./: .gitattributes  .gitignore  .prettierignore  CLAUDE.md  LICENSE.md  README.md  RUNME.sh  pyproject.toml
config/: main.yaml
config/collation/: clif-21.yaml
recipes/: 1-processing.sh  2-postprocessing.py  demographics.py  plotting.py  postprocessing.py  preprocessing.py  processing.sh  run_clifpy.py  run_federated.sh  run_generative_scoring.sh  run_me.sh  run_sofa_scoring.py  run_training.sh  slurm.sh  tabling.py
scratch/: preprocessing.py  processing.sh
src/coreopsis/: cli.py  client_app.py  loader.py  save_fed_avg.py  save_model_strategy.py  server_app.py  task.py  trainer.py
src/coreopsis/config/: collation.yaml  extraction.yaml  scoring.yaml  tokenization.yaml  training.yaml  winnowing.yaml
