[project]
    authors = [
        { name = "Michael C. Burkhart", email = "burkh4rt@uchicago.edu" },
        { name = "Brett K. Beaulieu-Jones", email = "beaulieujones@uchicago.edu" },
    ]
    classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3",
    ]
    dependencies = [
        "accelerate==0.34.2",
        "click<8.2",
        "cocoa @ git+https://github.com/burkh4rt/cocoa.git",
        "cotorra @ git+https://github.com/burkh4rt/cotorra.git@dev-rep-based-estimators",
        "flwr[simulation]==1.18.0",
        "huggingface_hub>=0.23.2,<1.0",
        "protobuf==4.25.3",
        "ray==2.31.0",
        "torch",
        "transformers==4.45.2",
        "typer==0.12.5",
    ]
    description = "choreographed federated learning of generative event models"
    keywords = [
        "federated learning",
        "generative event models",
        "configurable training",
    ]
    license = "MIT"
    license-files = [ "LICEN[CS]E.*" ]
    name = "coreopsis"
    readme = { file = "README.md", content-type = "text/markdown" }
    requires-python = ">=3.11"
    version = "26.5.0"

    [project.scripts]
        coreopsis = "coreopsis.cli:main"

    [project.urls]
        Repository = "https://github.com/burkh4rt/coreopsis"

    [project.optional-dependencies]
        dev = [ "pip", "ruff" ]

[build-system]
    build-backend = "setuptools.build_meta"
    requires      = [ "setuptools", "wheel" ]

[tool.flwr.app]
    publisher = "burkh4rt"

    [tool.flwr.app.components]
        clientapp = "coreopsis.client_app:app"
        serverapp = "coreopsis.server_app:app"

    [tool.flwr.app.config]
        datasets           = '["mimic-pre14","mimic-post14","ucmc-first"]'
        fed-strategy       = "FedAvgM"                                     # options: FedAvg, FedAvgM, FedAdam
        num-server-rounds  = 3
        output-home        = "./output/"
        processed-data-dir = "./processed/"
        training-config    = "./src/coreopsis/config/training.yaml"

[tool.flwr.federations]
    default = "minimal"

    [tool.flwr.federations.local]
        options.backend.client-resources.num-cpus = 0.3
        options.backend.client-resources.num-gpus = 0
        options.num-supernodes                    = 3

    [tool.flwr.federations.minimal]
        options.backend.client-resources.num-cpus = 1
        options.backend.client-resources.num-gpus = 0.3
        options.num-supernodes                    = 3

    [tool.flwr.federations.standard]
        options.backend.client-resources.num-cpus = 2
        options.backend.client-resources.num-gpus = 1
        options.num-supernodes                    = 3

[tool.ruff]
    extend-exclude = [ "*.md" ]
    line-length    = 88

    [tool.ruff.format]
        docstring-code-format     = true
        indent-style              = "space"
        line-ending               = "lf"
        quote-style               = "double"
        skip-magic-trailing-comma = true

    [tool.ruff.lint]
        ignore = [ "E731" ]
        select = [ "E", "F", "I" ]

        [tool.ruff.lint.isort]
            known-first-party       = [ "cocoa", "cotorra", "coreopsis" ]
            split-on-trailing-comma = false

[tool.setuptools]
    include-package-data = true

    [tool.setuptools.packages.find]
        where = [ "src" ]

    [tool.setuptools.package-data]
        "coreopsis.config" = [ "*.yaml" ]
